changed icon to cocktail

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,4 @@
 .footer {
-  position: fixed;
   background: #F4F4F4;
   display: flex;
   align-items: center;
@@ -7,6 +6,7 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
+  position: relative;
 }
 .footer-links {
   display: flex;
