cleaned cocktails index page

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,4 +1,8 @@
 .footer {
+  position: relative;
+  left: 0;
+  bottom: 0;
+  width: 100%;
   background: #F4F4F4;
   display: flex;
   align-items: center;
@@ -6,8 +10,8 @@
   height: 100px;
   padding: 0px 50px;
   color: rgba(0,0,0,0.3);
-  position: relative;
 }
+
 .footer-links {
   display: flex;
   align-items: center;
@@ -22,6 +26,24 @@
 .footer-links a:hover {
   opacity: 1;
 }
-.footer .fa-heart {
-  color: #D23333;
-}
+
+
+
+
+// {
+//   position: relative;
+//   background: #F4F4F4;
+//   display: flex;
+//   align-items: center;
+//   justify-content: space-between;
+//   height: 100px;
+//   padding: 0px 50px;
+//   color: rgba(0,0,0,0.3);
+// }
+   // position: fixed;
+   // left: 0;
+   // bottom: 0;
+   // width: 100%;
+   // background-color: red;
+   // color: white;
+   // text-align: center;
