--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,14 +1,19 @@
 <div class="container">
-  <div class="row justify-content-center">
-    <div class="col-md-8">
-      <h1>Create a new cocktail</h1>
 
-      <%= simple_form_for @cocktail do |f| %>
-        <%= f.input :name %>
-        <%= f.input :photo %>
-        <%= f.input :photo_cache, as: :hidden %>
-        <%= f.button :submit, class: 'btn btn-primary' %>
-      <% end %>
+  <div class="row justify-content-center">
+    <div class="col-xs-12 col-sm-4 col-md-6 col-md-offset-3">
+
+      <div class="form-login">
+        <h2>Add cocktail</h2>
+        <%= simple_form_for @cocktail do |f| %>
+          <%= f.input :name, placeholder: "martini" %>
+          <%= f.input :photo %>
+          <%= f.input :photo_cache, as: :hidden %>
+          <%= f.button :submit,  class: 'btn btn-warning btn-md' %>
+        <% end %>
+      </div>
+
     </div>
   </div>
+
 </div>
