--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link rel="shortcut icon" type="image/png" href="https://res.cloudinary.com/dcvksaiua/image/upload/v1567497588/cocktail-glass_cyjqqm.png"/>
   </head>
 
 
@@ -28,10 +29,9 @@
         <a class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Messages</a>
       </li>
       <li class="nav-item dropdown">
-        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://res.cloudinary.com/dcvksaiua/image/upload/v1567496509/head_shot_casual_rswyus.jpg" />
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" href="#">Action</a>
           <a class="dropdown-item" href="#">Another action</a>
@@ -51,14 +51,13 @@
 
   <div class="footer">
     <div class="footer-links">
-      <a href="#"><i class="fab fa-github"></i></a>
-      <a href="#"><i class="fab fa-instagram"></i></a>
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-twitter"></i></a>
-      <a href="#"><i class="fab fa-linkedin"></i></a>
+      <a href="https://github.com/shorthand13"><i class="fab fa-github"></i></a>
+      <a href="https://instagram.com/janus_nimen"><i class="fab fa-instagram"></i></a>
+      <a href="https://www.facebook.com/genki.kurihara"><i class="fab fa-facebook"></i></a>
+      <a href="https://linkedin.com/in/gkurihara"><i class="fab fa-linkedin"></i></a>
     </div>
     <div class="footer-copyright">
-      Made by Genki Kurihara <i class="fas fa-heart"></i>
+      Made by Genki Kurihara <i class="fas fa-angle-up"></i>
   </div>
 </div>
 
