cleaned show page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,14 +10,16 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
     <link rel="shortcut icon" type="image/png" href="https://res.cloudinary.com/dcvksaiua/image/upload/v1567497588/cocktail-glass_cyjqqm.png"/>
+
   </head>
 
 
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <a class="navbar-brand" href="#">
-    <img src="https://img.icons8.com/pastel-glyph/64/000000/cocktail--v2.png" />
-</a>
+
+<%= link_to image_tag("brand", alt: "cocktail"), root_path, :class=>'navbar-brand' %>
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -25,9 +27,6 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home</a>
-      </li>
       <li class="nav-item">
       </li>
       <li class="nav-item dropdown">
