--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-  position: relative;
+  position: fixed;
+  display: flex;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -7,8 +8,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  height: 100px;
-  padding: 0px 50px;
+  height: 60px;
+  padding: 16px 50px;
   color: rgba(0,0,0,0.3);
 }
 
