--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,39 +1,44 @@
+
 <div class="container">
-  <% if @cocktail.photo.present? %>
-    <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
-  <% end %>
 
-  <h1><%= @cocktail.name %></h1>
-  <%= link_to "Back to all cocktails", root_path %>
 
-  <div class="row">
-    <div class="col-sm-12 col-md-6">
-      <h3>Recipe</h3>
-      <table class="table table-bordered">
-        <tbody>
-          <thead>
-            <th>Ingredient</th>
-            <th>Description</th>
-            <th>Action</th>
-          </thead>
-          <% @cocktail.doses.each do |dose| %>
-            <tr>
-              <td><%= dose.ingredient.name %></td>
-              <td><%= dose.description %></td>
-              <td>
-                <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
-                  <i class="fa fa-trash destroy_dose"></i>
-                <% end %>
-              </td>
-            </tr>
-          <% end %>
-        </tbody>
-      </table>
+  <div class="row justify-content-around">
+    <div class="col-4 mt-4">
+        <h2><%= @cocktail.name %></h2>
+        <% if @cocktail.photo.present? %>
+        <%= cl_image_tag @cocktail.photo, height: 300, width: 400, crop: :fill %>
+        <%= link_to "Back to all cocktails", root_path %>
+      <% end %>
     </div>
 
-    <div class="col-sm-12 col-md-6">
-      <%= render "doses/form", cocktail: @cocktail, dose: @dose %>
+    <div class="col-4 mt-4">
+        <h3>Recipe</h3>
+        <table class="table table-bordered">
+          <tbody>
+            <thead>
+              <th>Ingredient</th>
+              <th>Description</th>
+              <th>Action</th>
+            </thead>
+            <% @cocktail.doses.each do |dose| %>
+              <tr>
+                <td><%= dose.ingredient.name %></td>
+                <td><%= dose.description %></td>
+                <td>
+                  <%= link_to dose_path(dose), method: :delete, data: { confirm: "Are you sure?" } do %>
+                    <i class="fa fa-trash destroy_dose"></i>
+                  <% end %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
     </div>
 
   </div>
+
+    <div class="row justify-content-center">
+        <%= render "doses/form", cocktail: @cocktail, dose: @dose %>
+    </div>
+
 </div>
