--- a/app/views/doses/_form.html.erb
+++ b/app/views/doses/_form.html.erb
@@ -1,6 +1,10 @@
-<h3>Add a new dose</h3>
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-  <%= f.association :ingredient, input_html: { class: "beautiful-dropdown" }, include_hidden: false %>
-  <%= f.input :description %>
-  <%= f.button :submit, class: "btn btn-primary" %>
-<% end %>
+<div class="col-xs-12 col-sm-4 col-sm-offset-4">
+  <div class="form-login">
+    <h2>Add a new dose</h2>
+    <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.association :ingredient, input_html: { class: "beautiful-dropdown" }, include_hidden: false%>
+      <%= f.input :description %>
+      <%= f.button :submit, class: "btn btn-warning btn-md" %>
+    <% end %>
+  </div>
+</div>
